# wikipicture

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  report.html
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/wikipicture/: __init__.py  __main__.py  cache.py  cli.py  clustering.py  commons_checker.py  exif_extractor.py  geocoder.py  quality_filter.py  report.py  scorer.py  wiki_analyzer.py
src/wikipicture.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/wikipicture/templates/: report.html.j2
tests/: test_commons_checker.py  test_exif_extractor.py  test_geocoder.py  test_quality_filter.py  test_scorer.py  test_wiki_analyzer.py
